--- a/resources/sass/mq/desktop/_structure.scss
+++ b/resources/sass/mq/desktop/_structure.scss
@@ -1,3 +1,21 @@
-html {
-	background: blue;
+/*-------------------------------------------------------------------------
+	
+	ZACK GINIES TURBO HIPSTER
+	
+	DESKTOP STRUCTURE
+	-----------------------------------
+	
+	- Portrait
+
+	
+-------------------------------------------------------------------------*/
+
+/* PORTRAIT ------------------------------------------------------------*/
+
+#portrait {
+	
+	h1 {
+		font-size: 85px
+	}
+
 }
