--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,6 +1,6 @@
 /*-------------------------------------------------------------------------
 	
-	ZACK GINIES SASS PROJECT
+	ZACK GINIES TURBO HIPSTER
 	
 	BASE STYLE IMPORTS
 	-----------------------------------
@@ -19,7 +19,7 @@
 
 /* NORMALIZE ------------------------------------------------------------*/
 
-@import "../css/normalize.css";
+@import "/public/css/normalize.css";
 
 
 /* MIXINS ---------------------------------------------------------------*/
