--- a/resources/sass/core/_fonts.scss
+++ b/resources/sass/core/_fonts.scss
@@ -27,3 +27,4 @@
 /* VARIABLES ------------------------------------------------------------*/
 
 $CoffeeService: 'Coffee Service';
+$Lato: 'Lato', sans-serif;
