--- a/resources/sass/core/_typography.scss
+++ b/resources/sass/core/_typography.scss
@@ -14,6 +14,12 @@
 
 h1 {
 	font-family: $CoffeeService;
+	font-weight: normal;
 	text-align: center;
 	color: #323136;
+}
+
+h2, h3, h4, h5, h6 {
+	font-weight: normal;
+	text-transform: uppercase;
 }
