--- a/resources/sass/mq/desktop/_structure.scss
+++ b/resources/sass/mq/desktop/_structure.scss
@@ -5,14 +5,14 @@
 	DESKTOP STRUCTURE
 	-----------------------------------
 	
-	- Portrait
+	- Intro
 
 	
 -------------------------------------------------------------------------*/
 
-/* PORTRAIT ------------------------------------------------------------*/
+/* INTRO ------------------------------------------------------------*/
 
-#portrait {
+#intro {
 	
 	h1 {
 		font-size: 85px
