--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -8,6 +8,7 @@
 	- Rounded Corners
 	- Box Sizing
 	- Opacity
+	- Animations
 	
 -------------------------------------------------------------------------*/
 
@@ -30,4 +31,46 @@
   opacity: $value;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity="+$IEValue+")";
   filter: alpha(opacity=$IEValue);
+}
+
+@mixin keyframes($name) {
+	@-webkit-keyframes #{$name} {
+		@content; 
+	}
+	
+	@-moz-keyframes #{$name} {
+		@content;
+	}
+	
+	@-ms-keyframes #{$name} {
+		@content;
+	}
+	
+	@keyframes #{$name} {
+		@content;
+	} 
+}
+
+@mixin animation($animation) {
+	-webkit-animation: #{$animation};
+	-moz-animation: #{$animation};
+	-ms-animation: #{$animation};
+	animation: #{$animation};
+}
+
+@mixin transform($transform) {
+	-webkit-transform: $transform;
+	-moz-transform: $transform;
+	-ms-transform: $transform;
+	transform: $transform;
+}
+
+@include keyframes(bounce) {
+	0%, 50%, 100% {
+		@include transform(translateY(0));
+	}
+	
+	20%, 70% {
+		@include transform(translateY(-10px));
+	}
 }
