--- a/resources/sass/mq/tablet/_structure.scss
+++ b/resources/sass/mq/tablet/_structure.scss
@@ -23,7 +23,8 @@
 		display: table-cell;
 		padding: 0 0 0 0;
 		vertical-align: middle;
-		font-size: 60px;
+		font-size: 142px;
+		letter-spacing: 4px;
 		color: #fff;
 	}
 	
@@ -40,5 +41,18 @@
 /* INFO ------------------------------------------------------------*/
 
 #info {
+	position: relative;
+	background: none;
 	padding-top: 40px;
+	
+	&:before {
+		position: absolute; left: 0; top: -50px;
+		background: url(../images/backgrounds/info_jaggy.png) 0 0 repeat-x;
+		background-size: 50px;
+		height: 50px;
+		width: 100%;
+		content: '';
+		
+		@include rotate(180deg);
+	}
 }
