--- a/resources/sass/core/_typography.scss
+++ b/resources/sass/core/_typography.scss
@@ -16,7 +16,7 @@ h1 {
 	font-family: $CoffeeService;
 	font-weight: normal;
 	text-align: center;
-	color: #323136;
+	color: $darkGrey;
 }
 
 h2, h3, h4, h5, h6 {
