--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,13 +166,13 @@ html, body {
 
 /* line 27, ../../resources/sass/_structure.scss */
 ::selection {
-  background: #00ffff;
+  background: cyan;
   /* Safari */
   color: #ff007e; }
 
 /* line 32, ../../resources/sass/_structure.scss */
 ::-moz-selection {
-  background: #00ffff;
+  background: cyan;
   /* Firefox */
   color: #ff007e; }
 
@@ -273,33 +273,30 @@ html, body {
       color: #fff; }
     /* line 31, ../../resources/sass/mq/tablet/_structure.scss */
     #intro .arrow {
-      margin-left: -40px;
-      width: 40px;
-      height: 40px;
-      background: url(../images/icons/arrow_down_white.png) 0 0 no-repeat;
-      background-size: contain; }
+      display: none; }
 
   /* INFO ------------------------------------------------------------*/
-  /* line 43, ../../resources/sass/mq/tablet/_structure.scss */
+  /* line 39, ../../resources/sass/mq/tablet/_structure.scss */
   #info {
     position: relative;
     background: none;
     padding-top: 40px; }
-    /* line 48, ../../resources/sass/mq/tablet/_structure.scss */
-    #info:before {
+    /* line 44, ../../resources/sass/mq/tablet/_structure.scss */
+    #info h2 {
       position: absolute;
       left: 0;
-      top: -50px;
-      background: url(../images/backgrounds/info_jaggy.png) 0 0 repeat-x;
-      background-size: 50px;
-      height: 50px;
+      top: -77px;
+      background: #fff;
+      padding: 20px 0;
       width: 100%;
-      content: '';
-      -webkit-transform: rotate(180deg);
-      -moz-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-      -o-transform: rotate(180deg);
-      transform: rotate(180deg); } }
+      font-weight: 700;
+      letter-spacing: 6px;
+      text-align: center;
+      text-transform: uppercase;
+      color: #ff007e; }
+      /* line 55, ../../resources/sass/mq/tablet/_structure.scss */
+      #info h2 span {
+        font-style: italic; } }
 /* DESKTOP -------------------------------------------------------------*/
 @media screen and (min-width: 1030px) {
   /*-------------------------------------------------------------------------
