--- a/resources/sass/mq/tablet/_structure.scss
+++ b/resources/sass/mq/tablet/_structure.scss
@@ -29,7 +29,8 @@
 	}
 	
 	.arrow {
-		margin-left:-40px;
+		bottom: 50px;
+		margin-left:-20px;
 		width: 40px;
 		height: 40px;
 		background: url(../images/icons/arrow_down_white.png) 0 0 no-repeat;
@@ -44,15 +45,9 @@
 	position: relative;
 	background: none;
 	padding-top: 40px;
+	color: $darkGrey;
 	
-	&:before {
-		position: absolute; left: 0; top: -50px;
-		background: url(../images/backgrounds/info_jaggy.png) 0 0 repeat-x;
-		background-size: 50px;
-		height: 50px;
-		width: 100%;
-		content: '';
-		
-		@include rotate(180deg);
+	p {
+		width: 50%;
 	}
 }
