--- a/resources/sass/_structure.scss
+++ b/resources/sass/_structure.scss
@@ -95,3 +95,10 @@ html, body {
 	}
 	
 }
+
+/* LIKES ------------------------------------------------------------*/
+
+#likes {
+	display: none;
+}
+
