--- a/resources/sass/mq/desktop/_structure.scss
+++ b/resources/sass/mq/desktop/_structure.scss
@@ -6,7 +6,7 @@
 	-----------------------------------
 	
 	- Intro
-
+	- Likes
 	
 -------------------------------------------------------------------------*/
 
@@ -19,4 +19,43 @@
 		letter-spacing: 6px;
 	}
 
+}
+
+/* LIKES ------------------------------------------------------------*/
+
+#likes {
+	display: block;
+	
+	.video_wrapper {
+		position: relative;
+		height: auto;
+		min-height: 100%;
+		width: auto;
+		min-width: 100%;
+		
+		
+		h2 {
+			position: absolute;
+			top: 50%;
+			width: 100%;
+			line-height: 45px;
+			font-size: 18px;
+			font-weight: normal;
+			text-align: center;
+			color: #fff;
+			
+			span {
+				display: block;
+				font-size: 60px;
+
+			}
+		}
+		
+		video {
+			height: auto;
+			min-height: 100%;
+			width: auto;
+			min-width: 100%;
+		}
+	}
 }
