--- a/resources/sass/core/_typography.scss
+++ b/resources/sass/core/_typography.scss
@@ -6,7 +6,7 @@
 	-----------------------------------
 	
 	- Headers
-
+	- Links
 	
 -------------------------------------------------------------------------*/
 
@@ -23,4 +23,11 @@ h2, h3, h4, h5, h6 {
 	font-weight: 700;
 	letter-spacing: 3px;
 	text-transform: uppercase;
+}
+
+/* LINKS --------------------------------------------------------------*/
+
+a {
+	text-decoration: none;
+	color: $hotPink;
 }
