--- a/resources/sass/mq/tablet/_structure.scss
+++ b/resources/sass/mq/tablet/_structure.scss
@@ -62,11 +62,11 @@
 	ul {
 		width: 50%;
 		margin: 0 auto;
+		padding: 0;
 		overflow: hidden;
 		
 		li {
-			float: left;
-			width: 50%;
+			margin-bottom: 5px;
 		}
 		
 	}
